--- a/Day4 - Hidden Search Widget/index.html
+++ b/Day4 - Hidden Search Widget/index.html
@@ -6,16 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hidden Search Widget</title>
     <script src="https://kit.fontawesome.com/d655b93d5e.js" crossorigin="anonymous"></script>
-    <script src="app.js"></script>
     <link rel="stylesheet" href="styles.css">
+    <script src="app.js" async defer></script>
 </head>
 <body>
     <div class="search">
         <input type="text" name="" id="" class="input" placeholder="Search...">
+        <button class="btn">
+            <i class="fas fa-search"></i>
+        </button>
     </div>
     
-    <button class="btn">
-        <i class="fas fa-search"></i>
-    </button>
+
 </body>
 </html>
